--- a/exam-frontend/package.json
+++ b/exam-frontend/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.13.2",
     "lucide-react": "^0.344.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
