feat: Update environment variables, improve error messages, and enhance ExamGuard functionality

--- a/exam-backend/.env
+++ b/exam-backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=192.168.1.8
-DB_USER=postgres
-DB_PASSWORD=pass
-DB_NAME=exam_db
+DB_HOST=127.0.0.1
+DB_USER=exam_user
+DB_PASSWORD=Exam@123
+DB_NAME=online_exam
 DB_PORT=5432
 JWT_SECRET=sghasg76s7a6s7a6s67w67e36re3re533eytwu1ut176rw54w3asfsas
 PORT=8080
